Imported Amplify Impostors. Created Imposters for buildings. Made ConstantForceApplier take transform rather local only be to parent. Tried fixing bumpy issue in PhysicsFriendlyTransform, did not fix yet.

--- a/.gitignore
+++ b/.gitignore
@@ -69,5 +69,8 @@ Assets/Imported/PolygonTown/*
 Assets/Imported/PolygonCity/*
 Assets/Imported/SmallCars_Sport/*
 Assets/Imported/VehiclePhysics/*
+Assets/Scenes/Main/*
+Assets/Prefabs/Impostered/*
+Assets/AmplifyImpostors/*
 
 !*.gitkeep
